Set max-size for taggs to prevent overflow

--- a/cib_home/static/css/main.css
+++ b/cib_home/static/css/main.css
@@ -1508,6 +1508,10 @@ tbody tr:nth-child(even) {
   font-family: 'Lato';
   font-weight: 400;
   line-height: 20px;
+  max-width: 125px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .custom-card-row {
